package cu.datys.patterns.gof.creational.factory_method.car;

/**
 * Created by Alex on 03/02/2018.
 */
public interface IEngine {
}
